* fixed bug #49819: STDOUT losing data with posix_isatty()

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@299437 c90b9560-bf6c-de11-be94-00142212c4b1